--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="profile-card"></div>
         <div id="cover"></div>
         <div id="avatar"></div>
-        <h1 id="name">Carl Chouinard</h1>
+        <h1 id="name">Burt Renolds</h1>
         <button id="follow" class="primary">Follow</button>
         <button id="following">Following</button>
         <button id="followers">Followers</button>
