--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
     </head>
     <body>
 
-<style type="text/css"> html:not(.gss-ready) { opacity: 50; } </style>
-<noscript> <style type="text/css"> html:not(.gss-ready) { opacity: 1; } </style> </noscript>
+        <style type="text/css"> 
+            html:not(.gss-ready) { opacity: 0; } 
+        </style>
+        <noscript> 
+            <style type="text/css"> html:not(.gss-ready) { opacity: 1; } 
+            </style> 
+        </noscript>
+        
     	<div id="background"></div>
         <div id="profile-card"></div>
         <div id="cover"></div>
