--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--[if IE 8]>
 <html class="no-js lt-ie9" ng-app="integrationApp"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" ng-app="muswipeApp"> <!--<![endif]-->
+<html> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,6 @@
         <link rel="stylesheet" href="structure.gss" type="text/gss">        
     </head>
     <body>
-
         <style type="text/css"> 
             html:not(.gss-ready) { opacity: 0; } 
         </style>
@@ -43,5 +42,6 @@
         <script type="text/javascript">
                 GSS.document = new GSS(document, {"gap": 20, "outer-radius": 20});
           </script>
+
     </body>
 </html>
